deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamertools
  namespace: streamertools
  labels:
      app: streamertools
spec:
  selector:
    matchLabels:
      app: streamertools
  replicas: 1
  template:
      metadata:
        labels:
          app: streamertools
      spec:
        containers:
          - name: streamertools
            image: <IMAGE>
            readinessProbe:
              httpGet:
                  path: /health
                  port: 3000
              initialDelaySeconds: 5
              periodSeconds: 5
            livenessProbe:
              httpGet:
                  path: /health
                  port: 3000
              initialDelaySeconds: 5
              periodSeconds: 5
            ports:
              - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: streamertools
  namespace: streamertools
spec:
  selector:
    app: streamertools
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamertools
  namespace: streamertools
spec:
  rules:
    - host: streamertools.intraweb.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamertools
                port:
                  number: 3000
